[package]
name = "pathypath"
version = "0.1.0"
authors = ["Selyatin Ismet <selyatinismet@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.78"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
eframe = "0.15.0"
web-sys = { version = "0.3.55", features=["Window"] }
rustc-hash = "1.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

# wasm-opt disabled because there aren't any binaries available for Apple's M1 chip.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = "fat"
